mern-todo-app/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: miqbalnawawi/frontend2:latest
          ports:
            - containerPort: 3000
              name: http-port
  selector:
    matchLabels:
      app: client
