mern-todo-app/frontend-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "landingpage-production"
spec:
  rules:
  - host: frontend.miqbalnawawi.site
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: frontend
          servicePort: 80
  #tls:
   # - hosts:
    #  - landingpage-production.miqbalnawawi.site
     # secretName: landing-page-tls
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: staging
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-port
  selector:
    app: client
  #type: LoadBalancer
