mern-todo-app/mongodb-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongo
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "landingpage-production"
spec:
  rules:
  - host: mongo.miqbalnawawi.site
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: mongo
          servicePort: 27017
  #tls:
   # - hosts:
    #  - landingpage-production.miqbalnawawi.site
     # secretName: landing-page-tls
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: staging
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    app: mongodb
  #type: LoadBalancer
